# pdi

./: CMakeLists.txt
.github/workflows/: pages.yml  tests.yml
plugins/damaris/: README.md  damaris.cxx  damaris_api_call_handler.cxx  damaris_cfg.cxx  damaris_cfg.h  damaris_wrapper.cxx
plugins/damaris/example/: CMakeLists.txt  example.c  example.yml  example_damaris_only.c  example_damaris_plugin.c  example_damaris_plugin_with_is_client.c  example_damaris_plugin_with_is_client.yml
plugins/damaris/example/ex_damaris_only/: example_damaris_api.xml  example_damaris_only.c
plugins/damaris/example/paraview/: CMakeLists.txt  image.cpp
plugins/damaris/example/python/: 3dmesh_py.c  3dmesh_py_domains.c  CMakeLists.txt
plugins/damaris/example/storage/: 2dmesh.c  CMakeLists.txt
